--- a/languages/scala/scala.org
+++ b/languages/scala/scala.org
@@ -12,16 +12,18 @@
 - Framework: Play Framework.
   Conocimientos deseables: Slick, Monix Task.
 - https://en.wikipedia.org/wiki/Scala_(programming_language)
-* Standard Library
+* Language
+** Standard Library
 - https://www.scala-lang.org/api/current/
-* Binary
-** Compatibility
+** Binary Compatibility
 #+begin_src
 Scala doesn't have binary compatibility, you can't even use a library compiled for 2.12 on Scala 2.13. For that
 reason library developers cross-compile to all versions they support.
 
 This is fixed in Scala 3, but it's only valid for Scala 3 and higher, it doesn't help for Scala 2.
 #+end_src
+* Codebases
+- https://github.com/twitter/the-algorithm
 * People
 - Martin Odersky (Creator)
 - Dick Wall (Courses)
