--- a/languages/csharp.org
+++ b/languages/csharp.org
@@ -1,3 +1,5 @@
+- Course: Beginning C# Programming https://ebookee.com/O-Reilly-Beginning-C-Programming-by-Eric-Lippert_3812779.html
+  Course: Intermediate C# Programming https://ebookee.com/O-Reilly-Intermediate-C-Programming-by-Eric-Lippert_3812766.html
 * Standard Library
 - https://en.wikipedia.org/wiki/Standard_Libraries_(CLI)
 - https://learn.microsoft.com/en-us/dotnet/standard/net-standard?WT.mc_id=dotnet-35129-website&tabs=net-standard-1-0
